<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:clickable="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:orientation="vertical"
        android:padding="@dimen/double_spacing">

        <Button
            android:id="@+id/anagramButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/anagram" />

        <Button
            android:id="@+id/htreeButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/htree" />

        <Button
            android:id="@+id/phoneDialerButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/phone_dialer" />

        <Button
            android:id="@+id/animationButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/animation" />

        <Button
            android:id="@+id/compressButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/compress_text" />

        <Button
            android:id="@+id/clockButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/clock" />

        <Button
            android:id="@+id/stocksButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/stocks" />

        <Button
            android:id="@+id/binaryTreeButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/binary_tree" />

    </LinearLayout>
</ScrollView>