<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:focusable="true"
    android:clickable="true"
    android:orientation="vertical"
    android:padding="@dimen/double_spacing"
    android:weightSum="1.0"
    android:background="?attr/colorPrimary">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/htree_level"/>

        <TextView
            android:id="@+id/htreeLevelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/s_horizontal_spacing"/>

        <Button
            android:id="@+id/decreaseLevelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/m_horizontal_spacing"
            android:text="@string/minus"/>

        <Button
            android:id="@+id/increaseLevelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/plus"/>
    </LinearLayout>

    <com.seljabali.practiceproblems.ui.htree.HTreeView
        android:id="@+id/htreeView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/double_spacing"
        android:layout_weight="0.9"/>

</LinearLayout>