<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:clickable="true"
    android:orientation="vertical"
    android:background="?attr/colorPrimary">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/double_spacing">

        <EditText
            android:id="@+id/inputATextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:hint="@string/sample_phone"
            android:inputType="number"
            tools:text="Hello World!" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/phone_dialer_height"
            android:src="@mipmap/phone_dial" />

        <Button
            android:id="@+id/calculateButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/double_spacing"
            android:text="@string/generate_possible_words" />

        <Button
            android:id="@+id/clearButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/double_spacing"
            android:text="@string/clear" />

        <TextView
            android:id="@+id/resultsTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/double_spacing" />
    </LinearLayout>
</ScrollView>
